@@ -13,7 +13,7 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  2.6.x - DD/MMM/2006
 ----------------------------------------------------------------------
 
- - Updated translations (be, fi, it, ja).
+ - Updated translations (be, de, es, fi, it, ja).
  - D-Bus stuff <expand comment> (Claessens Xavier).
  - Python: Fixed "restricted mode" errors on win32 [1512076].
  - Special-cased BRASnet for nickserv.
@@ -26,7 +26,8 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
    UTF-8.
  - Fixed: [1544960] quitting via tabs behaves bad on bncs.
  - Fixed: [1551620] --version flag needs display.
- - 
+ - "Clear" button in Ban List window now has a 'Are you sure?' dialog
+   for safety.
  - 
  - 
  - Perl (Lian Wan Situ)
